testcases/error/unknown_member.veryl
module unknown_member {
    struct StructA {
        x: logic,
    }

    var a  : StructA;
    assign a.x = 1;
    assign a.a = 1;
}
